# cambot

./: .gitignore  README.md  calibrate_limits.py  fix_servo_ids.py  pyproject.toml  read_all_params.py  run_calibrate_limits.sh  run_debug_control.sh  run_fix_servo_ids.sh  run_pid_tuning.sh  run_read_params.sh  run_servo_offset.sh  run_servo_test.sh  run_set_pid.sh  run_teleop.sh  run_visualize_urdf.sh  run_waypoint_nav.sh  servo_offset.py  servo_test.py  visualize_urdf.py  waypoint_nav.py
3dprint/: CamBot_Baseplate.stl  CamBot_Link1.stl  CamBot_Link2.stl  CamBot_Link2_Thin.stl  CamBot_Link3.stl  CamBot_Link4.stl  CamBot_Link5.stl  CamBot_ZedMiniMount.stl  CamBot_ZedMiniMount_OffCenter.stl  CamBot_v2.3mf
cambot/: __init__.py
cambot/servo/: __init__.py  constants.py  controller.py  protocol.py
cambot/teleop/: __init__.py  __main__.py  app.py  capture.py  ik_solver.py  server.py  webrtc.py
cambot/teleop/client/: index.html
cambot/tools/: __init__.py  calibrate_limits.py  debug_control.py  fix_servo_ids.py  pid_tuning.py  read_params.py  servo_offset.py  servo_test.py  set_pid.py  visualize_urdf.py  waypoint_nav.py
docs/: BUILD_GUIDE.md  reference_params.txt
docs/ST3215_manuals/: links.txt  register_notes.md
teleop/: debug_control.py  ik_solver.py  pid_tuning.py  robot_control.py  server.py  telehead.py  zed_capture.py
teleop/client/: index.html
urdf/: cambot.urdf  joint_origins.txt  stereobot.urdf
urdf/meshes/: Baseplate.stl  Link1.stl  Link2.stl  Link3.stl  Link4.stl  Link5.stl  ZedMiniMount.stl
