[project]
name = "cambot"
version = "0.1.0"
description = "StereoBot teleop system — VR head tracking, stereo camera streaming, and servo control"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "feetech-servo-sdk>=1.0",
    "ikpy>=3.4",
    "scipy>=1.14",
    "aiohttp>=3.10",
    "opencv-python>=4.10",
]

[project.optional-dependencies]
zed = [
    # pyzed must be installed from the ZED SDK, not PyPI:
    #   /usr/local/zed/get_python_api.py
    # or: uv pip install /path/to/pyzed-*.whl
]
viz = [
    "viser>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["teleop"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
